Update more to AI

--- a/locales/cs/common.yml
+++ b/locales/cs/common.yml
@@ -7,11 +7,10 @@ description: |
 # !!! Transfer to english
 Welcome:
     content: |
-        ChatGPT, AI, ML, GPT-4o, Anthropic Claude 3, Gemini, LLM, DALL-E, Midjourney,
-        Stable Diffusion, Sora, GitHub Co-pilot, GPTs... 🤯
+        ChatGPT, AI, ML, GPT, Anthropic Claude, Gemini, LLM, GitHub Co-pilot, Cursor, RAG, MCP, Books... 🤯
 
 
-        > Využíváte **plný potenciál technologií** a generativní umělé inteligence ve vašem podnikání?
+        > Využíváte **plný potenciál umělé inteligence** ve vašem podnikání?
 
 
         Technologie se neustále vyvíjí a momentálně zažíváme mohutnou vlnu nástupu **generativní umělé inteligence**,
