--- a/locales/en/common.yml
+++ b/locales/en/common.yml
@@ -6,11 +6,10 @@ description: |
 
 Welcome:
     content: |
-        ChatGPT, GPT-4, Anthropic Claude, Gemini, AI, ML, (Chat)GPT, LLM, DALL-E, Midjourney,
-        Stable Diffusion, Sora, VR/AR/XR, TypeScript, blockchain, Web3, PWA... 🤯
+        ChatGPT, AI, ML, GPT, Anthropic Claude, Gemini, LLM, GitHub Co-pilot, Cursor, RAG, MCP, Books... 🤯
 
 
-        Are you leveraging the **full potential of technology** and generative AI in your business?
+        Are you leveraging the **full potential of AI** in your business?
 
 
         Technology is constantly evolving and we are currently experiencing a massive wave of the emergence of **generative AI**,
